	  inserted in @ctx->al_entry (see descritpion for ntfs_attr_lookup() in
	  attrib.c for details).
	- Check the mount state of the output device in ntfsclone.
	- Correct a too strong sanity check in ntfsclone that prevented 
	  cloning from larger device to a smaller one but the NTFS image 
	  could have fit fully.
	- Added a few (hopefully) better explanatory messages to ntfsresize.

11/03/2004 - 1.9.0 - Added ntfsresize relocation support and a lot of cleanups.
	- In include/ntfs/*.h Wrap all #include "config.h" by #ifdef
	  HAVE_CONFIG_H. (Suggested by Christophe.)
	- Update doc/CodingStyle.  (Suggested by Szaka.)
	- Fix mkntfs for large volumes where the number of clusters would
	  exceed the maximum of 32 bits and mkntfs would segfault.  Now we
	  increase the cluster size until the number of clusters no longer
	  exceeds 32 bits or the maximum cluster size is reached.  We then
	  exit with an appropriate error message.  (Thanks to Szaka for the
	  bug report.)
	- Modify layout.h and logfile.h expanding/naming annonymous structs
	  and unions (much like I did earlier in the kernel driver) so that
	  the -fms-extensions switch is no longer required.  Also, removed
	  the -fms-extensions switch and associated autodetection from
	  ./configure.ac.  (Yuval Fledel with small fixes from me)
	- Update the build system: autogen.sh now uses autoreconf; run
	  autoupdate && autoreconf --force and fixup the fallout damage; rename
	  INCLUDES to AM_CPPFLAGS; add $srcdir to getgccver invocation.
	- Rename private to priv_data in ntfs_device_alloc() to avoid name
	  space clashes with C++.  (Yuval Fledel, modified fix by me)
	- Rename 'opt' struct member stdout to std_out in ntfsclone.c because
	  stdout is a macro on Cygwin and compilation fails.  (Yuval Fledel)
	- Make ntfs_attrs_walk() use AT_UNUSED and CASE_SENSITIVE instead of
	  zero when calling ntfs_lookup() for type checking correctness.  (Yuval
	  Fledel)